logout은 csrf 미들웨어 안써도 될듯.

--- a/templates/application.plush.html
+++ b/templates/application.plush.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= if(authenticity_token != "") { %>
       <meta name="csrf-token" content="<%= authenticity_token %>">
+    <% } %>
     <meta charset="utf-8">
     <title><%= title %> | AI Chat</title>
     <%= stylesheetTag("application.css") %>
